# quickPractice

./: .gitignore  README.md  function.c  function_pointers.cpp  while_cin.cpp
April2023/: a.out  pointers  pointers_v1  pointers_v1.c  refs  refs.cpp
April2025/: begin  begin.cpp
August2024/: car_v1.cpp  privateInheritance.cpp  randomEnum.cpp  shape.cpp  synFunctions_v1.cpp
December2024/: car_v1.cpp  classes.cpp  cube.hipnc  dyno  dynoArray_v1.cpp  dynoArray_v3.cpp  dynoArray_v5.cpp  example  example.cpp  file  file.c  file_v1.c  file_v2.c  file_v3.c  floatDynoArray.cpp  floatDynoArray_v1.cpp  floatDynoArray_v2.cpp  floatDynoArray_v3.cpp  floatDynoArray_v4.cpp  floatDynoArray_v5.cpp  fstream  fstream.cpp  fstream2  fstream3  fstream4  fstream_v3.cpp  fstream_v4.cpp  genVrtexArrays.cpp  obj  obj2  obj3  obj5  obj6  obj7  obj8  objReader_v1.cpp  plm  polymorphismus.cpp  readObj_v1.cpp  readObj_v2.cpp  (+14 more)
Dezember2024/: dynoArray_v2.cpp  dynoArray_v4.cpp  dynoArray_v5.cpp  enum.c  fstream_v1.cpp  fstream_v2.cpp  regex_v1.cpp  test_v1.c
February2024/: time  time.c  time1.c  time2  time2.c
February2025/: LinkList_v1.cpp  LinkedList_v2.cpp  LinkedList_v3.cpp  c_asm_v1.c  c_string.c  find  find4  find5  find_v1.cpp  find_v2.cpp  find_v3.cpp  find_v4.cpp  find_v5.cpp  find_v6.cpp  lam  linklist.cpp  (+27 more)
March2024/: CMakeLists.txt  a.out  main.cpp  mathy.c  openGl.cpp  opengl_first.cpp  pointers_a.c  pointers_b.c  printf.c  printf_scanf.c  scope_resolution_operator.cpp  some_test.c  static.cpp  static_new_v1.cpp  static_v2.cpp  static_v2.s  static_v4.cpp  stc  struct_typedef.c
(+380 files in other folders)
